--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h2>Tentang <span>Kami</span></h2>
       <div class="row">
         <div class="about-img">
-          <img src="../img/about-img.jpg" alt="" />
+          <img src="img/about-img.jpg" alt="" />
         </div>
         <div class="content">
           <h3>Kenapa harus makan di <span>Warteglorem</span>?</h3>
@@ -89,32 +89,32 @@
 
       <div class="row">
         <div class="card-menu">
-          <img src="../img/1-1.jpg" alt="" class="menu-card-img" />
+          <img src="img/1-1.jpg" alt="" class="menu-card-img" />
           <h3 class="menu-card-title">Ayam Bakar</h3>
           <p class="menu-card-price">Rp. 15.000</p>
         </div>
         <div class="card-menu">
-          <img src="../img/1-1.jpg" alt="" class="menu-card-img" />
+          <img src="img/1-1.jpg" alt="" class="menu-card-img" />
           <h3 class="menu-card-title">Ayam Bakar</h3>
           <p class="menu-card-price">Rp. 15.000</p>
         </div>
         <div class="card-menu">
-          <img src="../img/1-1.jpg" alt="" class="menu-card-img" />
+          <img src="img/1-1.jpg" alt="" class="menu-card-img" />
           <h3 class="menu-card-title">Ayam Bakar</h3>
           <p class="menu-card-price">Rp. 15.000</p>
         </div>
         <div class="card-menu">
-          <img src="../img/1-1.jpg" alt="" class="menu-card-img" />
+          <img src="img/1-1.jpg" alt="" class="menu-card-img" />
           <h3 class="menu-card-title">Ayam Bakar</h3>
           <p class="menu-card-price">Rp. 15.000</p>
         </div>
         <div class="card-menu">
-          <img src="../img/1-1.jpg" alt="" class="menu-card-img" />
+          <img src="img/1-1.jpg" alt="" class="menu-card-img" />
           <h3 class="menu-card-title">Ayam Bakar</h3>
           <p class="menu-card-price">Rp. 15.000</p>
         </div>
         <div class="card-menu">
-          <img src="../img/1-1.jpg" alt="" class="menu-card-img" />
+          <img src="img/1-1.jpg" alt="" class="menu-card-img" />
           <h3 class="menu-card-title">Ayam Bakar</h3>
           <p class="menu-card-price">Rp. 15.000</p>
         </div>
